--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -25,16 +25,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FDX-Kg-SVV">
-                                <rect key="frame" x="140" y="550" width="320" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="320" id="LiZ-au-Vkg"/>
-                                    <constraint firstAttribute="height" constant="50" id="Q3L-i0-J43"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7rz-Bu-tka">
                                 <rect key="frame" x="125" y="70" width="350" height="472"/>
                                 <constraints>
@@ -49,6 +39,16 @@
                                     </mask>
                                 </variation>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FDX-Kg-SVV">
+                                <rect key="frame" x="150" y="550" width="300" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="LiZ-au-Vkg"/>
+                                    <constraint firstAttribute="height" constant="50" id="Q3L-i0-J43"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -81,10 +81,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="h" translatesAutoresizingMaskIntoConstraints="NO" id="MLB-bH-NA4">
-                                <rect key="frame" x="273" y="20" width="55" height="55"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="helpr" translatesAutoresizingMaskIntoConstraints="NO" id="MLB-bH-NA4">
+                                <rect key="frame" x="230" y="20" width="140" height="55"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="55" id="3GX-Eh-cgk"/>
+                                    <constraint firstAttribute="width" constant="140" id="3GX-Eh-cgk"/>
                                     <constraint firstAttribute="height" constant="55" id="Cnv-VS-mTd"/>
                                 </constraints>
                             </imageView>
@@ -117,7 +117,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="One more thing..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sjy-Ni-mle">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter your zipcode" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sjy-Ni-mle">
                                 <rect key="frame" x="150" y="86" width="300" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="8AQ-eW-GDe"/>
@@ -165,17 +165,29 @@
                                     <action selector="requestButton:" destination="ahG-z7-Thp" eventType="touchUpInside" id="rZv-a7-Njk"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="So you can be matched with help requests in your local area" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PlM-lb-gYk">
+                                <rect key="frame" x="177" y="129" width="246" height="58"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="246" id="hyC-Yi-ypC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="U1L-JP-9lR" firstAttribute="top" secondItem="sjy-Ni-mle" secondAttribute="bottom" constant="74" id="DQU-E7-dJa"/>
+                            <constraint firstItem="PlM-lb-gYk" firstAttribute="top" secondItem="sjy-Ni-mle" secondAttribute="bottom" constant="-5" id="HBd-oj-9aI"/>
                             <constraint firstAttribute="centerX" secondItem="U1L-JP-9lR" secondAttribute="centerX" id="M31-NX-3RM"/>
                             <constraint firstAttribute="centerX" secondItem="sZ9-uR-8Ys" secondAttribute="centerX" id="Z4h-Lt-LME"/>
+                            <constraint firstItem="PlM-lb-gYk" firstAttribute="centerX" secondItem="sjy-Ni-mle" secondAttribute="centerX" id="be3-Ok-tIN"/>
                             <constraint firstItem="U1L-JP-9lR" firstAttribute="leading" secondItem="j5f-hl-KEt" secondAttribute="leading" id="gHJ-43-yIR"/>
                             <constraint firstItem="sjy-Ni-mle" firstAttribute="top" secondItem="a8f-la-pHc" secondAttribute="bottom" constant="66" id="gx1-RV-9x6"/>
                             <constraint firstAttribute="centerX" secondItem="sjy-Ni-mle" secondAttribute="centerX" id="hfa-Uf-IK4"/>
                             <constraint firstItem="U1L-JP-9lR" firstAttribute="trailing" secondItem="j5f-hl-KEt" secondAttribute="trailing" id="kmb-QF-mfa"/>
                             <constraint firstItem="j5f-hl-KEt" firstAttribute="bottom" secondItem="U1L-JP-9lR" secondAttribute="bottom" id="rcZ-NQ-we2"/>
+                            <constraint firstItem="U1L-JP-9lR" firstAttribute="top" secondItem="PlM-lb-gYk" secondAttribute="bottom" constant="21" id="sGB-h4-bZd"/>
                             <constraint firstItem="sZ9-uR-8Ys" firstAttribute="top" secondItem="sjy-Ni-mle" secondAttribute="bottom" constant="186" id="weU-Ef-n9a"/>
                         </constraints>
                     </view>
@@ -659,13 +671,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NCW-iD-t7e">
-                                <rect key="frame" x="10" y="310" width="580" height="110"/>
+                                <rect key="frame" x="10" y="315" width="580" height="110"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I Am Helping With:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JTE-Nq-XME">
-                                        <rect key="frame" x="8" y="8" width="161" height="21"/>
+                                        <rect key="frame" x="8" y="8" width="564" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="JJa-zW-qo6"/>
-                                            <constraint firstAttribute="width" constant="161" id="dLK-oy-8SH"/>
+                                            <constraint firstAttribute="width" constant="564" id="dLK-oy-8SH"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                         <nil key="highlightedColor"/>
@@ -693,7 +705,7 @@
                                             <action selector="withdrawButtonPressed:" destination="pZh-sY-qgU" eventType="touchUpInside" id="Rfo-YH-4TP"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qsy-2o-BBh">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="Qsy-2o-BBh">
                                         <rect key="frame" x="8" y="37" width="428" height="70"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="70" id="wLk-bG-QXO"/>
@@ -723,7 +735,7 @@
                                 </variation>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P4x-tA-1OS">
-                                <rect key="frame" x="10" y="185" width="580" height="110"/>
+                                <rect key="frame" x="10" y="195" width="580" height="110"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xbh-3W-Pgj">
                                         <rect key="frame" x="8" y="37" width="564" height="21"/>
@@ -734,10 +746,10 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I Requested Help With:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EOC-Nj-WaP">
-                                        <rect key="frame" x="8" y="8" width="201" height="21"/>
+                                        <rect key="frame" x="8" y="8" width="564" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="7lj-zc-W8i"/>
-                                            <constraint firstAttribute="width" constant="201" id="Awy-Qk-pjX"/>
+                                            <constraint firstAttribute="width" constant="564" id="Awy-Qk-pjX"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                         <nil key="highlightedColor"/>
@@ -786,8 +798,8 @@
                         <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="Sp6-ae-KqV" firstAttribute="top" secondItem="hBj-A6-S0A" secondAttribute="bottom" constant="71" id="4z6-FY-0g6"/>
-                            <constraint firstAttribute="bottom" secondItem="P4x-tA-1OS" secondAttribute="bottom" constant="305" id="9Hf-Hz-Dz8"/>
-                            <constraint firstItem="NCW-iD-t7e" firstAttribute="top" secondItem="P4x-tA-1OS" secondAttribute="bottom" constant="15" id="9qR-pA-yuS"/>
+                            <constraint firstAttribute="bottom" secondItem="P4x-tA-1OS" secondAttribute="bottom" constant="295" id="9Hf-Hz-Dz8"/>
+                            <constraint firstItem="NCW-iD-t7e" firstAttribute="top" secondItem="P4x-tA-1OS" secondAttribute="bottom" constant="10" id="9qR-pA-yuS"/>
                             <constraint firstItem="scF-9c-kfX" firstAttribute="leading" secondItem="86W-Dk-58D" secondAttribute="leadingMargin" constant="-6" id="DWL-iS-7Wf"/>
                             <constraint firstItem="scF-9c-kfX" firstAttribute="top" secondItem="NCW-iD-t7e" secondAttribute="bottom" constant="8" symbolic="YES" id="FoK-33-Akh"/>
                             <constraint firstItem="scF-9c-kfX" firstAttribute="top" secondItem="NCW-iD-t7e" secondAttribute="bottom" constant="8" id="H0r-4x-BaM"/>
@@ -1152,10 +1164,10 @@
         <image name="Chat" width="30" height="30"/>
         <image name="Handshake" width="30" height="30"/>
         <image name="Home" width="30" height="30"/>
-        <image name="h" width="300" height="300"/>
+        <image name="helpr" width="450" height="174"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="OKq-df-Zzw"/>
+        <segue reference="rJU-rD-EcA"/>
         <segue reference="Ibn-0L-JYp"/>
     </inferredMetricsTieBreakers>
 </document>
