--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -408,7 +408,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GD6-5m-mIt">
-                                <rect key="frame" x="238" y="300" width="125" height="40"/>
+                                <rect key="frame" x="238" y="410" width="125" height="40"/>
                                 <color key="backgroundColor" red="0.18039215689999999" green="0.80000000000000004" blue="0.4431372549" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="125" id="2f3-VU-c8n"/>
@@ -442,16 +442,41 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d8s-Cb-Ct8">
+                                <rect key="frame" x="150" y="274" width="300" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="RMf-Wd-YY4"/>
+                                    <constraint firstAttribute="height" constant="128" id="Wk9-QQ-lqp"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Wu-bi-f3u">
+                                <rect key="frame" x="130" y="246" width="340" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="JdF-J7-6b7"/>
+                                    <constraint firstAttribute="width" constant="340" id="Lw3-hh-ByD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstAttribute="centerX" secondItem="d8s-Cb-Ct8" secondAttribute="centerX" id="63R-iA-E1W"/>
                             <constraint firstAttribute="centerX" secondItem="GD6-5m-mIt" secondAttribute="centerX" constant="-0.5" id="6r4-r3-zBZ"/>
                             <constraint firstAttribute="centerX" secondItem="dnX-aj-CjA" secondAttribute="centerX" id="9IV-fS-epB"/>
                             <constraint firstItem="lyq-aN-cHd" firstAttribute="top" secondItem="hjz-Nh-I7B" secondAttribute="bottom" constant="36" id="Cdz-eL-ZGQ"/>
-                            <constraint firstItem="GD6-5m-mIt" firstAttribute="top" secondItem="vRj-3b-upE" secondAttribute="bottom" constant="58" id="DgZ-Nz-AS5"/>
+                            <constraint firstItem="GD6-5m-mIt" firstAttribute="top" secondItem="vRj-3b-upE" secondAttribute="bottom" constant="168" id="DgZ-Nz-AS5"/>
                             <constraint firstItem="dnX-aj-CjA" firstAttribute="top" secondItem="lyq-aN-cHd" secondAttribute="bottom" constant="-7" id="RVC-3n-ERX"/>
                             <constraint firstAttribute="centerX" secondItem="vRj-3b-upE" secondAttribute="centerX" id="U5A-3E-rbf"/>
                             <constraint firstItem="vRj-3b-upE" firstAttribute="top" secondItem="lyq-aN-cHd" secondAttribute="bottom" constant="28" id="eHL-LF-TDW"/>
+                            <constraint firstItem="d8s-Cb-Ct8" firstAttribute="top" secondItem="6Wu-bi-f3u" secondAttribute="bottom" constant="-7" id="kUV-w1-4pN"/>
+                            <constraint firstAttribute="centerX" secondItem="6Wu-bi-f3u" secondAttribute="centerX" id="sbv-c5-CRA"/>
+                            <constraint firstItem="d8s-Cb-Ct8" firstAttribute="top" secondItem="vRj-3b-upE" secondAttribute="bottom" constant="32" id="v16-yI-d2b"/>
                             <constraint firstAttribute="centerX" secondItem="lyq-aN-cHd" secondAttribute="centerX" id="vmP-5j-vmx"/>
                         </constraints>
                     </view>
@@ -459,6 +484,7 @@
                         <outlet property="acceptButtonOutlet" destination="GD6-5m-mIt" id="OjL-oh-XRc"/>
                         <outlet property="nameLabel" destination="vRj-3b-upE" id="gsj-Dv-ybi"/>
                         <outlet property="taskNameLabel" destination="lyq-aN-cHd" id="STq-by-PwT"/>
+                        <outlet property="textViewOutlet" destination="d8s-Cb-Ct8" id="e8U-kv-FkN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7eq-yG-p6K" userLabel="First Responder" sceneMemberID="firstResponder"/>
